--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             transition: color 0.3s ease-in-out;
         }
 
-        F{
+        .F {
             color: var(--heading-color);
             transition: color 0.3s ease-in-out;
         }
@@ -76,6 +76,34 @@
             position: absolute;
             top: 10px;
             right: 10px;
+        }
+
+        /* Media Query for Mobile Devices */
+        @media (max-width: 768px) {
+            .A, .B {
+                width: 100%;
+                height: auto;
+                position: static;
+                margin-bottom: 20px;
+            }
+            .C {
+                position: static;
+                text-align: center;
+                font-size: 30px;
+                top: 0;
+                left: 0;
+            }
+            .D {
+                position: static;
+                text-align: center;
+                top: 0;
+                left: 0;
+                margin-top: 20px;
+            }
+            .A p, .D p, .D ol {
+                text-align: left;
+                padding-left: 10px;
+            }
         }
     </style>
 </head>
@@ -102,7 +130,7 @@
     
     <div class="D">
         SKILLS
-        <ol class="F"style="color: rgba(255, 0, 0, 0.7); transition: color 0.3s ease-in-out;">
+        <ol class="F" style="color: rgba(255, 0, 0, 0.7); transition: color 0.3s ease-in-out;">
             <li>Programmer</li>
             <li>Web Developer</li>
             <li>Creativity</li>
