--- a/cv.html
+++ b/cv.html
@@ -67,7 +67,7 @@
             transition: color 0.3s ease-in-out;
         }
 
-        .F {
+        F{
             color: var(--heading-color);
             transition: color 0.3s ease-in-out;
         }
@@ -77,37 +77,48 @@
             top: 10px;
             right: 10px;
         }
-
-        /* Media Query for Mobile Devices */
-        @media (max-width: 768px) {
-            .A, .B {
-                width: 100%;
-                height: auto;
-                position: static;
-                margin-bottom: 20px;
-            }
-            .C {
-                position: static;
-                text-align: center;
-                font-size: 30px;
-                top: 0;
-                left: 0;
-            }
-            .D {
-                position: static;
-                text-align: center;
-                top: 0;
-                left: 0;
-                margin-top: 20px;
-            }
-            .A p, .D p, .D ol {
-                text-align: left;
-                padding-left: 10px;
-            }
+        
+        .container{
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
         }
+
+        @media (min-width: 475px){
+        .container{
+            max-width:475px;
+        }}
+
+        @media (min-width: 640px){
+        .container{
+            max-width:640px;
+        }}
+
+        @media (min-width: 768px){
+        .container{
+            max-width:768px;
+        }}
+
+        @media (min-width: 1024px){
+        .container{
+            max-width:1024px;
+        }}
+
+        @media (min-width: 1280px){
+        .container{
+            max-width:1280px;
+        }}
+
+        @media (min-width: 1536px){
+        .container{
+            max-width:1536px;
+        }}
+
     </style>
 </head>
-<body>
+<body class="continer">
     <button id="theme-toggle">Dark Mode</button>
 
     <div class="A">
@@ -130,7 +141,7 @@
     
     <div class="D">
         SKILLS
-        <ol class="F" style="color: rgba(255, 0, 0, 0.7); transition: color 0.3s ease-in-out;">
+        <ol class="F"style="color: rgba(255, 0, 0, 0.7); transition: color 0.3s ease-in-out;">
             <li>Programmer</li>
             <li>Web Developer</li>
             <li>Creativity</li>
@@ -163,4 +174,3 @@
     </script>
 </body>
 </html>
-
