--- a/cv.html
+++ b/cv.html
@@ -86,34 +86,34 @@
             padding-right: 0.5rem;
         }
 
-        @media (min-width: 475px){
+        @media (max-width: 475px){
         .container{
-            max-width:475px;
+            min-width:475px;
         }}
 
-        @media (min-width: 640px){
+        @media (max-width: 640px){
         .container{
-            max-width:640px;
+            min-width:640px;
         }}
 
-        @media (min-width: 768px){
+        @media (max-width: 768px){
         .container{
-            max-width:768px;
+            min-width:768px;
         }}
 
-        @media (min-width: 1024px){
+        @media (max-width: 1024px){
         .container{
-            max-width:1024px;
+            min-width:1024px;
         }}
 
-        @media (min-width: 1280px){
+        @media (max-width: 1280px){
         .container{
-            max-width:1280px;
+            min-width:1280px;
         }}
 
-        @media (min-width: 1536px){
+        @media (max-width: 1536px){
         .container{
-            max-width:1536px;
+            min-width:1536px;
         }}
 
     </style>
