--- a/cv.html
+++ b/cv.html
@@ -77,48 +77,10 @@
             top: 10px;
             right: 10px;
         }
-        
-        .container{
-            width: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            padding-left: 0.5rem;
-            padding-right: 0.5rem;
-        }
-
-        @media (max-width: 475px){
-        .container{
-            min-width:475px;
-        }}
-
-        @media (max-width: 640px){
-        .container{
-            min-width:640px;
-        }}
-
-        @media (max-width: 768px){
-        .container{
-            min-width:768px;
-        }}
-
-        @media (max-width: 1024px){
-        .container{
-            min-width:1024px;
-        }}
-
-        @media (max-width: 1280px){
-        .container{
-            min-width:1280px;
-        }}
-
-        @media (max-width: 1536px){
-        .container{
-            min-width:1536px;
-        }}
 
     </style>
 </head>
-<body class="continer">
+<body>
     <button id="theme-toggle">Dark Mode</button>
 
     <div class="A">
